Fixed debugging